# sop-runtime

./: .api-baseline.json  .coverage  .gitignore  .pre-commit-hooks.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INTERFACES.md  POSTMORTEM.md  README.md  VERSIONING_POLICY.md  pyproject.toml
.github/workflows/: adversarial.yml  release.yml
.mimocode/: .cron-lock
examples/: adversarial_walkthrough.md  compile-deny.ir.json  langgraph_integration.py  run_db_demo.py  run_llm_demo.py  violating.ir.json
examples/handlers/: README.md  llm_handler.py
examples/providers/: init_demo_db.py  mock_db.py  mock_payments.py  sqlite_provider.py
examples/sops/: data-export.sop.yaml  incident-response.sop.yaml  order-processing.sop.yaml
policies/: data-export.policy.yaml  incident-response.policy.yaml  order-processing.policy.yaml  support-agent.policy.yaml
schemas/: capability.schema.json  sop.schema.json
scripts/: check_api_compat.py
sopvm-milestone-1/sopvm/: README.md  pyproject.toml
src/sopvm/: __init__.py
src/sopvm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_import_boundaries.py
tests/adversarial/: README.md  test_escalation.py  test_gate.py  test_grammar_exploits.py  test_ir_tampering.py  test_provider_integrity.py
tests/examples/: test_llm_handler.py  test_sqlite_provider.py
tests/fixtures/: refund-request-handling.sop.yaml
tests/golden/: refund-request-handling.ast.json  refund-request-handling.ir.json  test_golden.py  test_ir_golden.py
tests/integration/: test_checker.py  test_langgraph.py  test_parse.py  test_telemetry.py
tests/unit/: test_cli.py  (+14 more)
(+56 files in other folders)
