[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sopvm"
dynamic = ["version"]
description = "A compiler and capability-gated runtime for Standard Operating Procedures executed by LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sushit" }]
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.20",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.90",
    "build",
]
langgraph = [
    "langgraph>=0.2.0",
]
llm-demo = [
    "llama-cpp-python>=0.3.0",
]

[project.scripts]
sopvm = "sopvm.cli.main:main"

[tool.hatch.version]
path = "src/sopvm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sopvm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
